:tada: Apply new custom changes in project

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ pyfiglet==0.7
 termcolor==1.1.0
 colorama==0.4.3
 
-# GUI CROSS PLATAFORM - KEYBOARD - OTHERS
+# GUI CROSS PLATAFORM - KEYBOARD
 PyAutoGUI==0.9.50
 keyboard==0.13.5
 
-# TOAST
+# WINDOWS TOAST
 win10toast==0.9
